--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,11 +50,11 @@ jobs:
     uses: sdr-enthusiasts/common-github-workflows/.github/workflows/build_and_push_image.yml@main
     with:
       push_enabled: true
-      push_destinations: ghcr.io;dockerhub
+      push_destinations: ghcr.io
       ghcr_repo_owner: ${{ github.repository_owner }}
       ghcr_repo: ${{ github.repository }}
-      dockerhub_profile: mikenye
-      dockerhub_repo: tar1090
+      # dockerhub_profile: mikenye
+      # dockerhub_repo: tar1090
       get_version_method: git_commit_hash_short
       # set build_latest to true if github.event.inputs.use_test_image is false
       build_latest: ${{ github.event.inputs.use_test_image == 'false' || github.event.inputs.use_test_image == '' }}
@@ -66,7 +66,7 @@ jobs:
       build_baseimage_url: wreadsb/wreadsb-test-pr
     secrets:
       ghcr_token: ${{ secrets.GITHUB_TOKEN }}
-      dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
+      # dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
 
   # unfortunately we can't use build_and_push_image.yml to build the telegraf label because
   # that GH Action doesn't have the capability to build specific custom-named labels
