--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,11 +76,11 @@ jobs:
     uses: sdr-enthusiasts/common-github-workflows/.github/workflows/build_and_push_image.yml@main
     with:
       push_enabled: true
-      push_destinations: ghcr.io;dockerhub
+      push_destinations: ghcr.io
       ghcr_repo_owner: ${{ github.repository_owner }}
       ghcr_repo: ${{ github.repository }}
-      dockerhub_profile: mikenye
-      dockerhub_repo: tar1090
+      # dockerhub_profile: mikenye
+      # dockerhub_repo: tar1090
       get_version_method: git_commit_hash_short
       # set build_latest to true if github.event.inputs.use_test_image is false
       build_latest: ${{ github.event.inputs.use_test_image == 'false' || github.event.inputs.use_test_image == '' }}
@@ -95,20 +95,20 @@ jobs:
         ##telegraf##/
     secrets:
       ghcr_token: ${{ secrets.GITHUB_TOKEN }}
-      dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
+      # dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
 
-  trigger_build_sdr-enthusiasts_ultrafeeder:
-    name: Trigger deploy of sdr-enthusiasts/docker-adsb-ultrafeeder
-    needs: ["deploy", "deploy_with_telegraf"]
-    runs-on: ubuntu-latest
-    env:
-      WORKFLOW_AUTH_TOKEN: ${{ secrets.GH_PAT_KX1T }}
-      WORKFLOW_REPO: sdr-enthusiasts/docker-adsb-ultrafeeder
-      WORKFLOW_FILE: deploy.yml
-      WORKFLOW_REASON: "triggered via deploy.yml in sdr-enthusiasts/docker-tar1090"
-      WORKFLOW_TEST_IMAGE: ${{ github.event.inputs.use_test_image }}
-    steps:
-      - name: Trigger ${{ env.WORKFLOW_FILE }} in ${{ env.WORKFLOW_REPO }}
-        run: |
-          echo "$WORKFLOW_AUTH_TOKEN" | gh auth login --with-token
-          gh workflow run --ref main --repo "$WORKFLOW_REPO" "$WORKFLOW_FILE" -f reason="$WORKFLOW_REASON" -f use_test_image="$WORKFLOW_TEST_IMAGE"
+#  trigger_build_sdr-enthusiasts_ultrafeeder:
+#    name: Trigger deploy of sdr-enthusiasts/docker-adsb-ultrafeeder
+#    needs: ["deploy", "deploy_with_telegraf"]
+#    runs-on: ubuntu-latest
+#    env:
+#      WORKFLOW_AUTH_TOKEN: ${{ secrets.GH_PAT_KX1T }}
+#      WORKFLOW_REPO: sdr-enthusiasts/docker-adsb-ultrafeeder
+#      WORKFLOW_FILE: deploy.yml
+#      WORKFLOW_REASON: "triggered via deploy.yml in sdr-enthusiasts/docker-tar1090"
+#      WORKFLOW_TEST_IMAGE: ${{ github.event.inputs.use_test_image }}
+#    steps:
+#      - name: Trigger ${{ env.WORKFLOW_FILE }} in ${{ env.WORKFLOW_REPO }}
+#        run: |
+#          echo "$WORKFLOW_AUTH_TOKEN" | gh auth login --with-token
+#          gh workflow run --ref main --repo "$WORKFLOW_REPO" "$WORKFLOW_FILE" -f reason="$WORKFLOW_REASON" -f use_test_image="$WORKFLOW_TEST_IMAGE"
